# lottery-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
public/: lottery.json  lottery.txt
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  lottery.json  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: PrizePanel.tsx  WinnerList.tsx  WinnerModal.tsx
src/components/three/: Sphere3D.tsx
src/hooks/: useLottery.ts
src/lib/: lotteryData.ts
src/types/: index.ts
